<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activities.SettingsActivity">


    <TextView
        android:id="@+id/cancel_settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="cancelSettings"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_settings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="saveSettings"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_settings" />

    <TextView
        android:id="@+id/settings_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_music"
        app:layout_constraintBottom_toTopOf="@+id/settings_sound_effects"
        app:layout_constraintEnd_toEndOf="@+id/settings_sound_effects"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/play_music_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeSettings"
        android:padding="8dp"
        android:text="@string/on"
        app:layout_constraintBottom_toBottomOf="@+id/settings_music"
        app:layout_constraintEnd_toEndOf="@+id/play_sounds_on"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/play_sounds_on"
        app:layout_constraintTop_toTopOf="@+id/settings_music" />

    <TextView
        android:id="@+id/play_music_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeSettings"
        android:padding="8dp"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="@+id/settings_music"
        app:layout_constraintEnd_toEndOf="@+id/play_sounds_off"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/play_sounds_off"
        app:layout_constraintTop_toTopOf="@+id/settings_music" />

    <TextView
        android:id="@+id/settings_sound_effects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_sound_effects"
        app:layout_constraintBottom_toTopOf="@+id/cancel_settings"
        app:layout_constraintEnd_toStartOf="@+id/play_sounds_on"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_music" />

    <TextView
        android:id="@+id/play_sounds_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="changeSettings"
        android:padding="8dp"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="@+id/settings_sound_effects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play_sounds_on"
        app:layout_constraintTop_toTopOf="@+id/settings_sound_effects" />

    <TextView
        android:id="@+id/play_sounds_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="changeSettings"
        android:padding="8dp"
        android:text="@string/on"
        app:layout_constraintBottom_toBottomOf="@+id/settings_sound_effects"
        app:layout_constraintEnd_toStartOf="@+id/play_sounds_off"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settings_sound_effects"
        app:layout_constraintTop_toTopOf="@+id/settings_sound_effects" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>